Storage/blob-storage-managed-identity/k8s/network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: storage-service
  labels:
    app: storage-service
spec:
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: storage-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-service
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800" # Set the timeout for the ingress controller
spec:
  ingressClassName: webapprouting.kubernetes.azure.com # Set the ingress class property to refer to the application routing add-on ingress class
  rules:
  - http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storage-service
            port:
              number: 8000
